# NDKSamples

./: README.md
NDK-DynamicRegistration/: settings.gradle
NDK-DynamicRegistration/app/src/main/cpp/: CMakeLists.txt  NDKManager.cpp  native-lib.cpp
NDK-DynamicRegistration/app/src/main/res/values/: strings.xml
NDK-DynamicRegistration/gen-libs/src/main/: AndroidManifest.xml
NDK-DynamicRegistration/gen-libs/src/main/cpp/gperf/: CMakeLists.txt
NDK-DynamicRegistration/gradle/wrapper/: gradle-wrapper.properties
NDK-HelloWorld/: README.md
NDK-HelloWorld/app/: build.gradle
NDK-HelloWorld/app/src/main/: AndroidManifest.xml
NDK-HelloWorld/app/src/main/jni/: Jni.cpp  com_example_jnitest_Jni.h
NDK-HelloWorld/app/src/main/res/layout/: activity_main.xml
NDK-Libs/app/: build.gradle
NDK-Libs/app/src/main/: AndroidManifest.xml
NDK-Libs/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NDK-Libs/distribution/slzr/include/: libposapplication_global.h
NDK-Libs/gen-libs/: build.gradle
NDK-Libs/gen-libs/src/main/cpp/: CMakeLists.txt
NDK-Libs/gen-libs/src/main/cpp/slzr/: CMakeLists.txt
NDK-Libs/gen-libs/src/main/res/values/: strings.xml
SerialPort/: build.gradle  import-summary.txt  local.properties
SerialPort/app/: build.gradle
SerialPort/app/src/main/: AndroidManifest.xml
SerialPort/app/src/main/jni/: SerialPort.c
SerialPort/app/src/main/res/layout/: activity_main.xml
SerialPort/app/src/main/res/menu/: main.xml
SerialPort/app/src/main/res/values/: color.xml  data_bits.xml  devices.xml  (+5 more)
SerialPort/gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
